# HackSeek

./: .env  .gitignore  README.md  ai_enhancement.py  app.py  auth_interface.py  auth_utils.py  cmds.txt  context_aware_tips.py  data_utils.py  domain_knowledge.py  file_upload_utils.py  groq_api.py  hackathon_tips.py  innovation_spotter.py  insights_generator.py  prioritization_system.py  problem_analyzer.py  pyproject.toml  requirements.txt  sample_problems.py  timeline.py
attached_assets/: Pasted-Connection-failed-with-status-502-and-response-DOCTYPE-html-html-lang-en-head-title-H-1743334631066.txt  Pasted-Steps-to-Build-Your-AI-1-Define-Objectives-Decide-the-scope-of-your-AI-Will-it-focus-on-tech-1743322198492.txt
