[project]
name = "hackseek"
version = "0.1.0"
description = "Add your description here"
python = ">=3.8,<3.13"
dependencies = [
    
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "passlib>=1.7.4",
    "plotly>=6.0.1",
    "psycopg2-binary>=2.9.10",
    "spacy>=3.8.4",
    "streamlit-extras>=0.6.0",
    "streamlit>=1.44.0",
    "textblob>=0.19.0",
    "twilio>=9.5.1",
    "anthropic>=0.49.0",
    "openai>=1.73.0",
    "requests>=2.32.3",
]
